--- a/gb/23/2/11/n13927560.md
+++ b/gb/23/2/11/n13927560.md
@@ -3,58 +3,50 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>云林招募寄养家庭 呼吁民众踊跃加入守护行列</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927566-599495-600x400.jpg" />
-<h6>云林县政府与云林家扶中心，11日在斗六国际三好酒店举办112年度寄养家庭招募暨授证典礼。（云林县政府提供）
-</h6>
+<h6>云林县政府与云林家扶中心，11日在斗六国际三好酒店举办112年度寄养家庭招募暨授证典礼。（云林县政府提供）</h6>
 <hr>
 <p>【大纪元2023年02月11日讯】（大纪元记者廖素贞台湾云林报导）云林县政府与云林家扶中心，11日在斗六国际三好酒店举办112年度寄养家庭招募暨授证典礼，县长张丽善除了为31户寄养家庭授证，感谢他们用心守护失依的孩子外，也呼吁有意愿的民众踊跃申请，加入家扶中心寄养家庭行列，让需要被照顾的孩子有个温暖的避风港。</p>
 <p>张丽善表示，感谢云林家扶中心从民国75年开始接受县府委托办理寄养服务，让失依的孩子在成长过程中，可以获得适当的照顾跟支持；这几年失依的孩子越来越多，但今年云林县合格授证的寄养家庭仅31户，有近八成儿少需要到机构或外县市接受照顾，非常急需新血加入，希望社会大众共襄盛举。</p>
-<figure id="attachment_13927564" aria-describedby="caption-attachment-13927564" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927564-599493.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13927564" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927564-599493-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13927564" class="wp-caption-text">县长张丽善（中）为寄养家庭授证。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_13927565" aria-describedby="caption-attachment-13927565" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927565-599494.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13927565" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927565-599494-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13927565" class="wp-caption-text">县长张丽善为寄养家庭授证。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_13927564" aria-describedby="caption-attachment-13927564" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927564-599493.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-13927564" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927564-599493-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13927564" class="wp-caption-text">县长张丽善（中）为寄养家庭授证。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_13927565" aria-describedby="caption-attachment-13927565" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927565-599494.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-13927565" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927565-599494-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13927565" class="wp-caption-text">县长张丽善为寄养家庭授证。（廖素贞／大纪元）</figcaption></figure>
 <p>云林家扶主委陈灿勋指出，云林县去年底需要安置儿少有169位，目前云林家扶中心的寄养家庭共31户，照顾35位寄养童，近5、6年来减少了29户寄养家庭、新加入只有20户，寄养家庭的流失非常严重，期盼对于照顾小孩有兴趣的家庭，能够踊跃加入寄养的行列，让这些孩子能够受到很好的照顾，重新体验家的温暖，平安健康长大。</p>
-<figure id="attachment_13927563" aria-describedby="caption-attachment-13927563" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927563-599492.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13927563" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927563-599492-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13927563" class="wp-caption-text">寄养妈妈许丽雅108年加入寄养家庭行列，现照顾小四双胞胎。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_13927562" aria-describedby="caption-attachment-13927562" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927562-599491.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13927562" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927562-599491-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13927562" class="wp-caption-text">寄养家庭李鸿铭、林玉凤伉俪和寄养孩子，温馨拥抱！（廖素贞／大纪元）</figcaption></figure>
-<p>&nbsp;</p>
+<figure id="attachment_13927563" aria-describedby="caption-attachment-13927563" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927563-599492.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-13927563" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927563-599492-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13927563" class="wp-caption-text">寄养妈妈许丽雅108年加入寄养家庭行列，现照顾小四双胞胎。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_13927562" aria-describedby="caption-attachment-13927562" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927562-599491.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-13927562" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927562-599491-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13927562" class="wp-caption-text">寄养家庭李鸿铭、林玉凤伉俪和寄养孩子，温馨拥抱！（廖素贞／大纪元）</figcaption></figure>
+<p>?</p>
 <p>今日活动，家扶中心特别邀请2户年龄较轻的寄养家庭分享照顾经验，其中寄养妈妈许丽雅，108年加入寄养家庭行列，现照顾小四双胞胎，她用爱心陪伴孩子矫正发音，改善语言表达及沟通能力。她说，当寄养家庭没那么困难，做了就会有自己的方法，家扶也会办很多课程让大家学习，所以不用担心，有兴趣、家里人手也够，就可以踊跃参加。</p>
-<figure id="attachment_13927561" aria-describedby="caption-attachment-13927561" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927561-599490.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13927561" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927561-599490-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13927561" class="wp-caption-text">云林县政府与云林家扶中心，11日在斗六国际三好酒店举办112年度寄养家庭招募暨授证典礼。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_13927561" aria-describedby="caption-attachment-13927561" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13927561-599490.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-13927561" src="https://i.epochtimes.com/assets/uploads/2023/02/id13927561-599490-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13927561" class="wp-caption-text">云林县政府与云林家扶中心，11日在斗六国际三好酒店举办112年度寄养家庭招募暨授证典礼。（廖素贞／大纪元）</figcaption></figure>
 <p>寄养家庭李鸿铭、林玉凤伉俪也是108年加入寄养家庭行列，林玉凤说，她的孩子已经长大，所以申请成为寄养家庭，希望能帮助受虐儿，他们照顾的第一个孩子刚来时语言迟缓、身上布满新旧伤痕，她跟先生都非常不舍与心疼，在家扶社工的协助下，她带着孩子慢慢做早疗，现在孩子不仅非常活泼，话也说得很清楚，而且非常贴心，让她很感动。</p>
 <p>社会处表示，家庭式照顾是儿少成长过程中重要的基石，透过完整的家庭照顾才得以健全人格发展。照顾弱势族群一直是云林县政府重要的政策及责任，而寄养家庭就是照顾弱势儿少的重要方式，故培植寄养家庭一直是县府很重要的任务，且112年本县寄养家庭林进财、张惠钗伉俪获选全国绩优寄养家庭并将于112年4月23日接受表扬，显见中央对寄养家庭的重视。</p>
 <p>陈灿勋主委指出，去年本县共新增4户寄养家庭，但还是不够，呼吁年满25岁、品行端正、拥有国中以上学历、家中有足够空间、稳定收入者加入寄养行列，共同守护及疼惜失依的孩子。有意愿者请洽电云林家扶05-6323200寄养组。</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/25/n13852257.md#1">国际警惕中共正招募西方飞行员培训其军队</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/21/n13870192.md#1">嘉义地区寄养家庭授证典礼 让爱得以延续</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/7/n13880169.md#1">惟仕同济会表扬肯定 云林家扶18位自强家庭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/25/n13891468.md#1">桃捷招募79名优秀新血</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/14/n13906891.md#1">安置家庭授证表扬 谢国梁感谢寄养家庭付出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/9/n13926246.md#1">云林家扶展力学子 踏出户外展现自我能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14330911.md#1">画家李明龙 以画刀书写台湾乡土的力量与美感</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330777.md#1">屏东台电长青感恩音乐传递爱 爷奶庆中秋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330763.md#1">台湾第一件阵头重要古物大龙旗 北港文化中心展出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330565.md#1">澹火共舞薪火相传 2024云林诏安客家文化节正式登场</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330857.md#1">“人造月亮”照亮的中秋节 “西方极乐世界”给人展现了什么?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330096.md#1">【未解之谜】与高白外星人共事两年（上）：神秘传说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327659.md#1">中秋节：月亮 嫦娥和月饼交织天上人间的情缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332006.md#1">【未解之谜】与高白外星人共事两年（下）：秘密合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329618.md#1">“月夕”和“夕月”展现古今两个不一样的中秋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/18/n14333808.md#1">【马克时空】德军舰过台海 F125巡防舰实力如何</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333123.md#1">【财经非常道】“超级央行周”降息 牵动人心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/6/n14196280.md#1">【思想领袖】揭秘中共数十年来控制南海的战略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332201.md#1">大连超市收到两张同号百元钞票 验不出真假</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332775.md#1">红卫兵头目宋彬彬去世 十年前为文革罪行道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332175.md#1">拍《热辣滚烫》曾减肥50公斤 贾玲复胖引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330971.md#1">港星徐少强病故 妻料理后事时突发心脏病猝逝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333022.md#1">《喜结良缘》首日14人次观看 票房仅642元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331237.md#1">艾美奖得奖名单 《幕府将军》男女主角封帝后 共拿18奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331652.md#1">组图：艾美奖红毯 女明星高端礼服竞艳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331412.md#1">牙医：早餐中常见的这些食物伤牙 要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332666.md#1">为什么人们刚想到的事情马上就忘记？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327027.md#1">中秋吃月饼、烤肉无负担 中医授三招减脂攻略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330811.md#1">食物收纳应注意哪些？ 这3类物品应分隔放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14328404.md#1">新研究：5:2间歇性禁食有益老人大脑健康</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688921.md#1">【重播】川普及内阁成员抵达海湖庄园婚礼现场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687003.md#1">【独家】张又侠等军头和习矛盾激烈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687419.md#1">【独家】张又侠落马 军方启动临战状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686742.md#1">中国转为零工经济国 民众挣扎求生存</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/11/n13927560.htm">云林招募寄养家庭 呼吁民众踊跃加入守护行列</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/11/n13927560.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
